--- a/examples/build-soy/package.json
+++ b/examples/build-soy/package.json
@@ -2,17 +2,15 @@
   "name": "build-deps",
   "version": "1.0.0",
   "author": "Cybozu, Inc.",
-  "engines": {
-    "node": ">=16"
-  },
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "deps": "duck build:deps",
-    "clean": "duck clean:deps",
-    "closure-make-deps": "closure-make-deps --root js --exclude node_modules --exclude build --closure-path node_modules/google-closure-library/closure/goog --no-validate > build/closure-make-deps.deps.js",
-    "closure-make-deps:validate": "closure-make-deps --root js --exclude build --closure-path node_modules/google-closure-library/closure/goog",
-    "test": "npm run deps"
+    "build": "duck build",
+    "clean": "rimraf build js/soy",
+    "serve": "duck serve",
+    "start": "run-p static serve",
+    "static": "st",
+    "test": "npm run build"
   },
   "keywords": [],
   "license": "MIT",
