--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "clean": "rimraf dist lib .tsbuildinfo",
+    "clean": "rimraf dist",
     "lint": "run-p lint:*",
     "lint:tsc": "tsc -p tsconfig.test.json",
     "lint:eslint": "eslint --ext js,ts src test types examples",
@@ -49,7 +49,6 @@
     "p-settle": "^5.1.0",
     "pino": "^8.15.0",
     "pino-pretty": "^9.4.1",
-    "recursive-readdir": "^2.2.3",
     "rimraf": "^5.0.1",
     "rxjs": "^6.6.7",
     "semver": "^7.5.4",
@@ -58,8 +57,7 @@
     "tempy": "3.0.0",
     "workerpool": "^6.4.2",
     "xmlbuilder": "^15.1.1",
-    "yargs": "^17.7.2",
-    "zet": "^1.1.0"
+    "yargs": "^17.7.2"
   },
   "peerDependencies": {
     "google-closure-compiler": ">=20180910.1.0"
@@ -69,7 +67,6 @@
     "@types/common-tags": "^1.8.1",
     "@types/listr": "^0.14.4",
     "@types/node": "~18.17.12",
-    "@types/recursive-readdir": "^2.2.1",
     "@types/rimraf": "^4.0.5",
     "@types/semver": "^7.5.1",
     "@types/split2": "^4.2.0",
