--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,4 +53,5 @@ jobs:
         if: matrix.node-version == '18.17.x'
         uses: codecov/codecov-action@54bcd8715eee62d40e33596ef5e8f0f48dbbccab # v4
         with:
+          token: ${{ secrets.CODECOV_TOKEN }} # required
           verbose: true # optional (default = false)
